working on normalizing urls with URL class